--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,5 @@ uvicorn==0.23.2
 pydantic==2.3.0
 pytest==7.4.2
 mysql-connector==8.1.0
-
-pyjwt==2.8.0
-python-decouple==3.8
+passlib==1.7.4
+bcrypt==4.0.1
