--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,89 @@
-fastapi==1.103.1
-uvicorn==0.23.2
-pydantic==2.3.0
-pytest==7.4.2
-mysql-connector==2.2.9
-passlib==1.7.4
+alabaster==0.7.13
+annotated-types==0.5.0
+anyio==3.7.1
+anytree==2.9.0
+attrs==23.1.0
+autopage==0.5.1
+Babel==2.12.1
 bcrypt==4.0.1
+beautifulsoup4==4.12.2
+bullet==2.2.0
+cachetools==5.3.1
+certifi==2023.7.22
+chardet==5.2.0
+charset-normalizer==3.2.0
+click==8.1.7
+cliff==4.3.0
+cmd2==2.4.3
+colorama==0.4.6
+configobj==5.0.8
+configparser==6.0.0
+distlib==0.3.7
+dnspython==2.0.0
+docutils==0.20.1
+fastapi==0.103.1
+filelock==3.12.4
+gnupg==2.3.1
+h11==0.14.0
+humanfriendly==10.0
+idna==3.4
+imagesize==1.4.1
+importlib-metadata==6.8.0
+iniconfig==2.0.0
+ipwhois==1.2.0
+Jinja2==3.1.2
+lxml==4.9.3
+MarkupSafe==2.1.3
+mccabe==0.7.0
+mysql-connector==2.2.9
+mysqlclient==2.2.0
+packaging==23.1
+passlib==1.7.4
+pbr==5.11.1
+pexpect==4.8.0
+platformdirs==3.10.0
+pluggy==1.3.0
+prettytable==3.9.0
+property-manager==3.0
+protobuf==4.21.12
+psutil==5.9.5
+ptyprocess==0.7.0
+pydantic==2.3.0
+pydantic_core==2.6.3
+pyflakes==3.1.0
+Pygments==2.16.1
+PyJWT==2.8.0
+pyodbc==4.0.39
+pyperclip==1.8.2
+pyproject-api==1.6.1
+pytest==7.4.2
+python-decouple==3.8
 python-dotenv==1.0.0
+python-path==0.1.3
+python-secrets==23.4.2
+PyYAML==6.0.1
+requests==2.31.0
+setuptools-scm==8.0.3
+six==1.16.0
+sniffio==1.3.0
+snowballstemmer==2.2.0
+soupsieve==2.5
+Sphinx==7.2.6
+sphinxcontrib-applehelp==1.0.7
+sphinxcontrib-devhelp==1.0.5
+sphinxcontrib-htmlhelp==2.0.4
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.6
+sphinxcontrib-serializinghtml==1.1.9
+starlette==0.27.0
+stevedore==5.1.0
+tox==4.11.3
+typing_extensions==4.7.1
+urllib3==2.0.5
+uvicorn==0.23.2
+verboselogs==1.7
+virtualenv==20.24.5
+wcwidth==0.2.6
+xkcdpass==1.19.4
+yamlreader==3.0.4
+zipp==3.17.0
