--- a/requirements.txt
+++ b/requirements.txt
@@ -21,9 +21,11 @@ configparser==6.0.0
 distlib==0.3.7
 dnspython==2.0.0
 docutils==0.20.1
+exceptiongroup==1.1.3
 fastapi==0.103.1
 filelock==3.12.4
 gnupg==2.3.1
+gunicorn==21.2.0
 h11==0.14.0
 humanfriendly==10.0
 idna==3.4
@@ -77,6 +79,7 @@ sphinxcontrib-qthelp==1.0.6
 sphinxcontrib-serializinghtml==1.1.9
 starlette==0.27.0
 stevedore==5.1.0
+tomli==2.0.1
 tox==4.11.3
 typing_extensions==4.7.1
 urllib3==2.0.5
